# ecr-cleanup

./: .gitignore  lambda-cloudformation.yaml  main.py  pyproject.toml
